[package]
name = "yap"
version = "0.1.0"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies.anyhow]
version = "1.0.31"

[dependencies.futures]
version = "0.3.5"

[dependencies.crossterm]
version = "0.17.5"
features = ["event-stream"]

[dependencies.structopt]
version = "0.3.15"
features = ["wrap_help"]

[dependencies.tokio]
version = "0.2.21"
features = [
    "macros",
    "io-util",
    "io-std",
    "fs",
    "rt-core",
]

# Required until https://github.com/crossterm-rs/crossterm/pull/453 is released
[patch.crates-io.crossterm]
git = "https://github.com/brennie/crossterm"
branch = "dev/conin"
